--- a/index.ipynb
+++ b/index.ipynb
@@ -1061,10 +1061,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 34,
+   "metadata": {},
    "outputs": [],
    "source": [
     "unique_travel_cities = list(unique_travel_cities)"
@@ -1072,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1081,7 +1079,7 @@
        "list"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1099,28 +1097,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Toronto',\n",
-       " 'Archipelago Sea',\n",
-       " 'Iguazu Falls',\n",
-       " 'Pyeongchang',\n",
-       " 'Los Cabos',\n",
-       " 'Buenos Aires',\n",
-       " 'Marakesh',\n",
+       "['Albuquerque',\n",
        " 'Greenville',\n",
-       " 'Albuquerque',\n",
+       " 'Marakesh',\n",
+       " 'Buenos Aires',\n",
        " 'Salina Island',\n",
+       " 'Iguazu Falls',\n",
        " 'Walla Walla Valley',\n",
+       " 'Solta',\n",
+       " 'Pyeongchang',\n",
+       " 'Archipelago Sea',\n",
        " 'San Antonio',\n",
-       " 'Solta']"
+       " 'Toronto',\n",
+       " 'Los Cabos']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
